--- a/MikuMikuFlex/MMFTest/MMFTest.csproj
+++ b/MikuMikuFlex/MMFTest/MMFTest.csproj
@@ -70,19 +70,19 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="PanelTestForm.cs">
+    <Compile Include="inactive\PanelTestForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="PanelTestForm.Designer.cs">
+    <Compile Include="inactive\PanelTestForm.Designer.cs">
       <DependentUpon>PanelTestForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SimpleDemo.cs" />
-    <Compile Include="TestChildForm.cs">
+    <Compile Include="inactive\TestChildForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="TestChildForm.Designer.cs">
+    <Compile Include="inactive\TestChildForm.Designer.cs">
       <DependentUpon>TestChildForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="ControlForm.resx">
@@ -91,7 +91,7 @@
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="PanelTestForm.resx">
+    <EmbeddedResource Include="inactive\PanelTestForm.resx">
       <DependentUpon>PanelTestForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
